--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     
     
       <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="https://www.github.com/luscaslcs" title="My GitHub profile">lucaserr</a>.
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="external">Frontend Mentor</a>. 
+        Coded by <a href="https://www.github.com/luscaslcs" target="_blank" rel="external" title="My GitHub profile">lucaserr</a>.
       </div>
   </body>
 </html>
